@@ -212,3 +212,5 @@ b bugfix
               + markov/bath.plot_LUT
               + markov/bath.plot_cutoff
               * hamiltonian/jaynes_cummings:  allow multiple modes as well as multiple atoms.
+              + utils/cm_phase
+              + utils/R_SO3
